--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <header>
-        <h1>TODO: Cambiar este encabezado</h1>
+        <h1>Examen de Entornos 2024</h1>
     </header>
 
     <main>
