Modifico el footer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     </main>
 
     <footer>
-        <p>TODO: Añadir más cosas de contactos</p>
+        <p>correo electrónico:afrancoyuste@gmail.com</p>
+        <p>Teléfono : 644976867</p>
     </footer>
 
     <script src="script.js"></script>
