Añado una tabla al html

--- a/index.html
+++ b/index.html
@@ -13,9 +13,26 @@
     </header>
 
     <main>
+        <table border>
+            <tr>
+<th>Hola</th>
+<th>Hola</th>
+<th>Hola</th>
+            </tr>
+            <tr>
+                <th>Hola</th>
+                <th>Hola</th>
+                <th>Hola</th>
+                            </tr>
+                            <tr>
+                                <th>Hola</th>
+                                <th>Hola</th>
+                                <th>Hola</th>
+                                            </tr>
+        </table>
         <!-- Contenido principal aquí -->
     </main>
-
+    
     <footer>
         <p>correo electrónico:afrancoyuste@gmail.com</p>
         <p>Teléfono : 644976867</p>
