He añadido un footer

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <footer>
         <p>correo electrónico:afrancoyuste@gmail.com</p>
         <p>Teléfono : 644976867</p>
+        <p>Teléfono : 644976867</p>
     </footer>
 
     <script src="script.js"></script>
