fusión de ramas

--- a/index.html
+++ b/index.html
@@ -8,15 +8,35 @@
 <body>
 
     <header>
-        <h1>TODO: Cambiar este encabezado</h1>
+        <img src="dibujo.png">
+        <h1>Examen de Entornos 2024</h1>
     </header>
 
     <main>
+        <table border>
+            <tr>
+<th>Hola</th>
+<th>Hola</th>
+<th>Hola</th>
+            </tr>
+            <tr>
+                <th>Hola</th>
+                <th>Hola</th>
+                <th>Hola</th>
+                            </tr>
+                            <tr>
+                                <th>Hola</th>
+                                <th>Hola</th>
+                                <th>Hola</th>
+                                            </tr>
+        </table>
         <!-- Contenido principal aquí -->
     </main>
-
+    
     <footer>
-        <p>TODO: Añadir más cosas de contactos</p>
+        <p>correo electrónico:afrancoyuste@gmail.com</p>
+        <p>Teléfono : 644976867</p>
+        <p>Teléfono : 644976867</p>
     </footer>
 
     <script src="script.js"></script>
