--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
+    <meta>
+    <link rel="nosé" href="estilos.css">
     <title>Examen ED 2024</title>
 </head>
 <body>
 
     <header>
-        <h1>Examen de Entornos 2024</h1>
+        <h1>¡Encabezado definitivo: no borrar!</h1>
+		<p>A mí tampoco me borres, por favor :(</p>
     </header>
 
     <main>
-        <!-- Contenido principal aquí -->
+        <ul>
+			<li>¡No me dejes aquí, cuidado que borro cosas!</li>
+		</ul>
     </main>
 
     <footer>
-        <p>correo electrónico:afrancoyuste@gmail.com</p>
-        <p>Teléfono : 644976867</p>
+        <p>Contacto: >> NOMBRE Y APELLIDOS DEL ALUMNO >> </p>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
